# i-dot-ai-utilities

./: .editorconfig  .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/: .github.env
.github/workflows/: checks.yaml  deploy.yaml  step-version-and-create-release.yaml  temp_publish.yaml
sandbox/: README.md  docker-compose.yaml
sandbox/apps/django-app/: Dockerfile  manage.py  pyproject.toml
sandbox/apps/django-app/demo/: apps.py  settings.py  views.py  wsgi.py
sandbox/apps/django-otel-app/: Dockerfile  manage.py  pyproject.toml
sandbox/apps/django-otel-app/demo/: apps.py  settings.py  urls.py  views.py
sandbox/apps/fastapi-app/: Dockerfile  main.py  pyproject.toml
sandbox/loadgen/: script.js
sandbox/otel-collector/: config.yaml
src/i_dot_ai_utilities/: __init__.py
src/i_dot_ai_utilities/auth/: __init__.py  auth_api.py  auth_reason.py
src/i_dot_ai_utilities/auth/__tests__/: conftest.py  test_auth_api.py
src/i_dot_ai_utilities/file_store/: README.md  __init__.py  main.py  settings.py
src/i_dot_ai_utilities/file_store/__tests__/: conftest.py  test_file_store.py
src/i_dot_ai_utilities/file_store/__tests__/azure/: conftest.py  test_azure_file_store.py
src/i_dot_ai_utilities/file_store/__tests__/gcp/: conftest.py  test_gcp_file_store.py
src/i_dot_ai_utilities/file_store/__tests__/s3/: conftest.py
src/i_dot_ai_utilities/file_store/aws_s3/: main.py
src/i_dot_ai_utilities/file_store/azure_blob_storage/: main.py
src/i_dot_ai_utilities/file_store/gcp_cloud_storage/: main.py
src/i_dot_ai_utilities/file_store/types/: kwargs_dicts.py
src/i_dot_ai_utilities/litellm/: README.md  main.py  settings.py
src/i_dot_ai_utilities/litellm/tests/: conftest.py  test_queries.py
src/i_dot_ai_utilities/logging/: README.md  __init__.py  _limits.py  processor_helper.py  structured_logger.py
src/i_dot_ai_utilities/logging/__tests__/: conftest.py  test_enricher_django.py  test_enricher_fargate.py  test_enricher_fastapi.py  test_enricher_lambda.py  test_enricher_lambda_context.py  test_enricher_lambda_environment.py  test_instantiation.py  test_middleware_django.py  test_middleware_exclusions.py  test_middleware_levels.py  test_middleware_settings.py  test_middleware_trace_parsers.py  test_optional_django_import.py  test_outputs.py
src/i_dot_ai_utilities/logging/__tests__/_otel/: conftest.py  test_propagators.py  test_setup.py  test_structlog_processor.py
src/i_dot_ai_utilities/logging/__tests__/middleware/: test_django_otel.py  test_django_user_id.py  test_request_id.py
src/i_dot_ai_utilities/logging/_otel/: __init__.py  propagators.py  setup.py  structlog_processor.py
src/i_dot_ai_utilities/logging/enrichers/: django_enricher.py  enrichment_provider.py  fargate_enricher.py  fastapi_enricher.py  lambda_context_enricher.py  lambda_enricher.py
src/i_dot_ai_utilities/logging/middleware/: SCHEMA.md  __init__.py  _exclusions.py  _headers.py  _levels.py  _settings.py  _trace.py  django.py  django_otel.py  django_user_id.py
src/i_dot_ai_utilities/logging/types/: base_context.py  context_enrichment_options.py  context_fields.py  django_enrichment_schema.py  enrichment_types.py  fargate_enrichment_schema.py  fastapi_enrichment_schema.py  lambda_enrichment_schema.py  log_output_format.py  logger_config_options.py
src/i_dot_ai_utilities/metrics/: README.md  cloudwatch.py  cloudwatch_embedded.py  cloudwatch_emf.py  interfaces.py
src/i_dot_ai_utilities/metrics/__tests__/: test_metrics.py
src/i_dot_ai_utilities/metrics/types/: embedded_metric_format.py
src/i_dot_ai_utilities/s3/: main.py  settings.py
