[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "i-dot-ai-utilities"
version = "0.0.1"
description = "Utilities for i.ai to use"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = {text = "MIT"}
authors = [
    {name = "i-dot-ai-packages", email = "packages@cabinetoffice.gov.uk"},
]
keywords = ["python", "package"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "boto3>=1.38.35",
    "litellm>=1.74.0.post1",
    "minio>=7.2.15",
    "requests>=2.32.3",
    "structlog>=25.4.0",
    "ecologits>=0.8.2",
    "rapidfuzz>=3.13.0",
]

[project.urls]
"Homepage" = "https://github.com/i-dot-ai/i-dot-ai-utilities"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Dribble in those we have commented out, asterisked ones first
select = [
    "A",
    "B",
    "C",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ARG",
    "ASYNC",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "EXE",
    "FURB",
    "ICN",
    "INT",
    "ISC",
    "LOG",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "TCH",
    "TD",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
exclude = ["out/*"]
ignore = ["COM812", "DJ001", "RET505", "RET508", "PLR0913"]

[tool.ruff.lint.isort]
known-first-party = ["i-dot-ai-utilities"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "PLR0913", "PLR0915", "PLR2004", "TD003", "S311"]
"src/i_dot_ai_utilities/*/__tests__/*" = ["S101", "S106", "PLR0913", "PLR0915", "PLR2004", "TD003", "S311"]
"*/tests/*" = ["S101", "S106", "PLR0913", "PLR0915", "PLR2004", "TD003"]
"*/tests_playwright/*" = ["S101", "S106", "PLR0913", "PLR2004", "TD003"]
"src/i_dot_ai_utilities/logging/*" = ["TRY003"]
"src/i_dot_ai_utilities/litellm/*" = ["EM101", "TRY003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.7",
    "starlette>=0.47.0",
    "types-requests>=2.32.4.20250611",
    "types-setuptools>=80.9.0.20250529",
    "types-urllib3>=1.26.25.14",
]

[tool.hatch.build]
exclude = [
    "src/**/__tests__/**",
    "src/**/__tests__",
]

[tool.hatch.build.targets.wheel]
packages = ["src/i_dot_ai_utilities"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning:botocore.auth",
    "ignore::UserWarning:pydantic.*",
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    "ignore:.*Expected.*fields but got.*:UserWarning",
    "ignore:.*The `dict` method is deprecated.*:pydantic.warnings.PydanticDeprecatedSince20"
]
